--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,7 @@
 
   <div class="container">
     <div class="skill">
-      <img src="c_logo.png" alt="C Logo">
+      <img src="https://commons.wikimedia.org/wiki/File:C_Logo.png" alt="C Logo">
       <h3>C</h3>
     </div>
 
