--- a/achievements.html
+++ b/achievements.html
@@ -37,7 +37,7 @@
 </nav>
   <section id="achievements">
   
-    <div class="container">
+    <div class="container" style="margin-top: 5%;">
       <h2  style="font-family: Roboto, sans-serif; font-weight: bold;
       text-transform: uppercase;
       letter-spacing: 2px;
@@ -66,31 +66,15 @@
       </div>
     </div>
   </section>
+ 
   <footer class="footer">
-    <div class="container">
-     <div class="row">
-       <div class="footer-col">
-         <h4>company</h4>
-         <ul>
-           <li><a href="index.html">ABOUT ME</a></li>
-           <li><a href= "achievements.html">MY ACHEIVEMENTS</a></li>
-           <li><a href="skills.html">SKILLS</a></li>
-           <li><a href="contact.html"></a></li>
-         </ul>
-       </div>
-       
-       <div class="footer-col">
-         <h4>follow us</h4>
-         <div class="social-links">
-
-           <a href="https://github.com/codegeek03"><i class="fab fa-github"></i></a>
-           <a href="https://www.instagram.com/scoop__ahoy/"><i class="fab fa-instagram"></i></a>
-           <a href="https://www.linkedin.com/in/shamik-bhattacharjee-078760221/"><i class="fab fa-linkedin-in"></i></a>
-         </div>
-       </div>
-     </div>
+    <div class="social-media">
+      <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
     </div>
- </footer>
+    <p class="footer-text">© 2023 All rights reserved by shamik bhattacharjee.</p>
+  </footer>
 <!-- Your content here -->
 
 <!-- Include Bootstrap JS (optional, for certain components) -->
