--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark ">
+<nav class="navbar navbar-expand-lg navbar-dark " >
   <div class="container robot-text">
     <a class="navbar-brand ms-2" href="#">PORTFOLIO</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,21 +37,18 @@
 </nav>
 <section id="about">
   
-    <div class="container">
+    <div class="container" style="margin-top: 5%; text-align: center; " >
       <h2  style="font-family: Roboto, sans-serif; font-weight: bold;
       text-transform: uppercase;
       letter-spacing: 2px;
       color: black;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">ABOUT ME!</h2><BR><BR>
-      <div class="about-content">
-        <div class="image-container">
-<<<<<<< HEAD
+      <span class="about-content">
+        <span class="image-container">
+
           <img src="https://media.licdn.com/dms/image/D4D03AQHA4Xd6_56WQw/profile-displayphoto-shrink_800_800/0/1675963006994?e=1693440000&v=beta&t=gO4Z-gl84rfdDlvnFq9Qq3Nu_diAnMv1TFP2kQyI_dw">
-=======
-          <img src="https://github.com/codegeek03/web/blob/main/FB_IMG_1678133920492.jpg">
->>>>>>> d518be8b9eae3660733c46570f53ad1f2681ebd2
-        </div>
-        <div class="text-container">
+        </span>
+        <span class="text-container">
           
           <p>
             <h5><b>
@@ -59,36 +56,19 @@
 Passionate about AI, machine learning, and quantitative finance, I am a sophomore at IIT Kharagpur. I thrive on developing intelligent systems, analyzing data, and applying mathematical techniques to solve complex financial problems. Leveraging technology and data-driven approaches, I aim to innovate and gain valuable insights in these domains. With a strong foundation in mathematics, programming, and data analysis, I actively pursue opportunities to enhance my skills. I possess leadership, teamwork, and communication abilities honed through extracurricular activities. Eager to contribute and make a positive impact, I am driven to explore the dynamic fields of AI, machine learning, and quantitative finance.
             </b></h5>
             </p>
-        </div>
-      </div>
+          </span>
+        </span>
     </div>
   </section>
  
   <footer class="footer">
-    <div class="container">
-     <div class="row">
-       <div class="footer-col">
-         <h4>company</h4>
-         <ul>
-           <li><a href="index.html">ABOUT ME</a></li>
-           <li><a href= "achievements.html">MY ACHEIVEMENTS</a></li>
-           <li><a href="skills.html">SKILLS</a></li>
-           <li><a href="contact.html"></a></li>
-         </ul>
-       </div>
-       
-       <div class="footer-col">
-         <h4>follow us</h4>
-         <div class="social-links">
-
-           <a href="https://github.com/codegeek03"><i class="fab fa-github"></i></a>
-           <a href="https://www.instagram.com/scoop__ahoy/"><i class="fab fa-instagram"></i></a>
-           <a href="https://www.linkedin.com/in/shamik-bhattacharjee-078760221/"><i class="fab fa-linkedin-in"></i></a>
-         </div>
-       </div>
-     </div>
+    <div class="social-media">
+      <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
     </div>
- </footer>
+    <p class="footer-text">© 2023 All rights reserved by shamik bhattacharjee.</p>
+  </footer>
 
 <!-- Your content here -->
 
