--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Passionate about AI, machine learning, and quantitative finance, I am a sophomor
  
   <footer class="footer">
     <div class="social-media">
-      <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-      <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/shamik-bhattacharjee-078760221/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/scoop__ahoy/" class="social-icon"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/codegeek03" class="social-icon"><i class="fab fa-github"></i></a>
     </div>
     <p class="footer-text">© 2023 All rights reserved by shamik bhattacharjee.</p>
   </footer>
