--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       color: black;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">ABOUT ME!</h2><BR><BR>
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 75px;">ABOUT ME!</h2><BR><BR>
       <span class="about-content">
         <span class="image-container">
 
-          <img src="https://media.licdn.com/dms/image/D4D03AQHA4Xd6_56WQw/profile-displayphoto-shrink_800_800/0/1675963006994?e=1693440000&v=beta&t=gO4Z-gl84rfdDlvnFq9Qq3Nu_diAnMv1TFP2kQyI_dw">
+          <img src="https://lh3.googleusercontent.com/pw/AJFCJaWbUmlvhs0qtdF8ZE2SwHIE5ZKiJbLQ6vawRbnYaCf8eAX2x9lUsLuTBESekJarNfBGqf7pcJ8phQyjMabWL-97EMJCXao3vmgV8HfkVZ8bNaW6XIUvDuDeGUNidhMKtlDsWezbWV1AJvPZ3-t29nfhcAYgvFYmn247gocHWe5Kl6ggv5vpFMWzHR-GqiuTIiIMwCzq5WYBAXbL6lYNW6O7hkMYReCY5VUo05wDTjc_8d4zcpAMqjsxZCr-X_8Hj8gBUQ7NAWOJLhx_h8yCKtpcxpVDBFaEQr2AZhD2m0XOovDpKfmPlh4qRFl78PkOnMLtksAx0xUwajmyeXd0wSTnUCmu9Cajhm5bdCfU2xeZaCJDzPqNPjAS9lgwYZApCxdu5PcvvQ-sc-7_UKUq3vt1ZBCHO2i5j93e6QCekVj9QOla9g2s1AloLg8taHfhHd5bm4o_crHiRTAVprbu6-rlRIq6juIlBkxx531bF8rAJQtD9UVb68-CsA3DHyaJ8lwfl1cf0HTEbVdRh0-u-m58A5tqRuTXRAebiwObzEU4qR2VNVvTQb7Kr3k-L2L_gOMdH2vzVcZHCigQ7n2Jffkpr5HZ6V8C5EBVJyVVvlIjAYSIqNvql61lpVd6wsjzK0f2waXPJqAsRsce8fOQgOGlPQi-Qf6e3r9pqCp3VvD0ngXd18fwCKR4HKJWI6TW6KE3kaBAHkeTzVN5WuP8pXNWJyVNtzpCFUDH1YQ3m9n-r66lL3WC513zdxr9kdgXpT_1VksHUneiEFCPxDf2oqqB-FYUG4X_vLayjfP_w6Dz-78ZzMQWjsOJxUTo43LEvwP6XOdP9Gv6CgWH5ZZkOC9m5yROfck4_eDnreM-H51J-vcsNGS5t2oVxP4Ucz2Ai76KHR4UamXM_AVKnCrvZ7q-qQ=w484-h860-s-no?authuser=0">
         </span>
         <span class="text-container">
           
           <p>
-            <h5><b>
+            <h2><b>
               
 Passionate about AI, machine learning, and quantitative finance, I am a sophomore at IIT Kharagpur. I thrive on developing intelligent systems, analyzing data, and applying mathematical techniques to solve complex financial problems. Leveraging technology and data-driven approaches, I aim to innovate and gain valuable insights in these domains. With a strong foundation in mathematics, programming, and data analysis, I actively pursue opportunities to enhance my skills. I possess leadership, teamwork, and communication abilities honed through extracurricular activities. Eager to contribute and make a positive impact, I am driven to explore the dynamic fields of AI, machine learning, and quantitative finance.
-            </b></h5>
+            </b></h2>
             </p>
           </span>
         </span>
