--- a/achievements.html
+++ b/achievements.html
@@ -42,7 +42,10 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       color: black;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">ACHEIVEMENTS</h2><BR><BR>
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);"><i class="fa fa-trophy" style="font-size: 60px;"></i>
+ACHEIVEMENTS</h2>
+
+      <BR><BR>
       <div class="achievements-content">
         
         <div class="text-container">
