--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
           <p>
             <h2><b>
               
-Passionate about AI, machine learning, and quantitative finance, I am a sophomore at IIT Kharagpur. I thrive on developing intelligent systems, analyzing data, and applying mathematical techniques to solve complex financial problems. Leveraging technology and data-driven approaches, I aim to innovate and gain valuable insights in these domains. With a strong foundation in mathematics, programming, and data analysis, I actively pursue opportunities to enhance my skills. I possess leadership, teamwork, and communication abilities honed through extracurricular activities. Eager to contribute and make a positive impact, I am driven to explore the dynamic fields of AI, machine learning, and quantitative finance.
+              I am a versatile web developer with expertise in front-end technologies, creating dynamic and user-friendly websites. Alongside my passion for competitive coding, I excel in problem-solving and algorithmic thinking, consistently participating in coding competitions to refine my skills. Additionally, I am an AI/ML enthusiast, staying updated on the latest advancements to apply intelligent solutions in real-world scenarios. Drawing from my strong background in quantitative finance, I possess the ability to develop robust algorithms and implement data-driven strategies. With a holistic skill set encompassing web development, competitive coding, AI/ML, and quantitative finance, I bring a unique perspective to deliver innovative solutions for diverse projects.
             </b></h2>
             </p>
           </span>
         </span>
     </div>
   </section>
+  
  
   <footer class="footer">
     <div class="social-media">
