--- a/index.html
+++ b/index.html
@@ -1,79 +1,91 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>ABOUT</title>
   <!-- Include Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <!-- Custom CSS for AI Theme -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
+
 <body>
 
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark " >
-  <div class="container robot-text">
-    <a class="navbar-brand ms-2" href="#">PORTFOLIO</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto ">
-        <li class="nav-item ">
-          <a class="nav-link " href="index.html">ABOUT ME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="achievements.html">ACHEIVEMENTS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="skills.html">SKILLS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">CONTACT</a>
-        </li>
-      </ul>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark ">
+    <div class="container robot-text">
+      <a class="navbar-brand ms-2" href="#">PORTFOLIO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto ">
+          <li class="nav-item ">
+            <a class="nav-link " href="index.html">ABOUT ME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="achievements.html">ACHEIVEMENTS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="skills.html">SKILLS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">CONTACT</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<section id="about">
-  
-    <div class="container" style="margin-top: 5%; text-align: center; " >
-      <h2  style="font-family: Roboto, sans-serif; font-weight: bold;
+  </nav>
+  <section id="about">
+
+    <div class="container" style="margin-top: 5%; text-align: center; ">
+      <h2 style="font-family: Roboto, sans-serif; font-weight: bold;
       text-transform: uppercase;
       letter-spacing: 2px;
-      color: black;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 75px;">ABOUT ME!</h2><BR><BR>
+      color: rgba(222, 21, 192, 0.819);
+      text-shadow: 2px 2px 4px; font-size: 75px;">ABOUT ME!</h2><BR><BR>
       <span class="about-content">
-        <span class="image-container">
-
-          <img src="https://lh3.googleusercontent.com/pw/AJFCJaWbUmlvhs0qtdF8ZE2SwHIE5ZKiJbLQ6vawRbnYaCf8eAX2x9lUsLuTBESekJarNfBGqf7pcJ8phQyjMabWL-97EMJCXao3vmgV8HfkVZ8bNaW6XIUvDuDeGUNidhMKtlDsWezbWV1AJvPZ3-t29nfhcAYgvFYmn247gocHWe5Kl6ggv5vpFMWzHR-GqiuTIiIMwCzq5WYBAXbL6lYNW6O7hkMYReCY5VUo05wDTjc_8d4zcpAMqjsxZCr-X_8Hj8gBUQ7NAWOJLhx_h8yCKtpcxpVDBFaEQr2AZhD2m0XOovDpKfmPlh4qRFl78PkOnMLtksAx0xUwajmyeXd0wSTnUCmu9Cajhm5bdCfU2xeZaCJDzPqNPjAS9lgwYZApCxdu5PcvvQ-sc-7_UKUq3vt1ZBCHO2i5j93e6QCekVj9QOla9g2s1AloLg8taHfhHd5bm4o_crHiRTAVprbu6-rlRIq6juIlBkxx531bF8rAJQtD9UVb68-CsA3DHyaJ8lwfl1cf0HTEbVdRh0-u-m58A5tqRuTXRAebiwObzEU4qR2VNVvTQb7Kr3k-L2L_gOMdH2vzVcZHCigQ7n2Jffkpr5HZ6V8C5EBVJyVVvlIjAYSIqNvql61lpVd6wsjzK0f2waXPJqAsRsce8fOQgOGlPQi-Qf6e3r9pqCp3VvD0ngXd18fwCKR4HKJWI6TW6KE3kaBAHkeTzVN5WuP8pXNWJyVNtzpCFUDH1YQ3m9n-r66lL3WC513zdxr9kdgXpT_1VksHUneiEFCPxDf2oqqB-FYUG4X_vLayjfP_w6Dz-78ZzMQWjsOJxUTo43LEvwP6XOdP9Gv6CgWH5ZZkOC9m5yROfck4_eDnreM-H51J-vcsNGS5t2oVxP4Ucz2Ai76KHR4UamXM_AVKnCrvZ7q-qQ=w484-h860-s-no?authuser=0">
-        </span>
-        <span class="text-container">
+        <div class="team-member">
+          <img src="FB_IMG_1678133920492.jpg" alt="Team Member 1">
           
+        </div>
+        <span class="text-container">
+
           <p>
-            <h2><b>
-              
-              I am a versatile web developer with expertise in front-end technologies, creating dynamic and user-friendly websites. Alongside my passion for competitive coding, I excel in problem-solving and algorithmic thinking, consistently participating in coding competitions to refine my skills. Additionally, I am an AI/ML enthusiast, staying updated on the latest advancements to apply intelligent solutions in real-world scenarios. Drawing from my strong background in quantitative finance, I possess the ability to develop robust algorithms and implement data-driven strategies. With a holistic skill set encompassing web development, competitive coding, AI/ML, and quantitative finance, I bring a unique perspective to deliver innovative solutions for diverse projects.
+          <h2><b>
+
+              I am a versatile web developer with expertise in front-end technologies, creating dynamic and
+              user-friendly websites. Alongside my passion for competitive coding, I excel in problem-solving and
+              algorithmic thinking, consistently participating in coding competitions to refine my skills. Additionally,
+              I am an AI/ML enthusiast, staying updated on the latest advancements to apply intelligent solutions in
+              real-world scenarios. Drawing from my strong background in quantitative finance, I possess the ability to
+              develop robust algorithms and implement data-driven strategies. With a holistic skill set encompassing web
+              development, competitive coding, AI/ML, and quantitative finance, I bring a unique perspective to deliver
+              innovative solutions for diverse projects.
             </b></h2>
-            </p>
-          </span>
+          </p>
         </span>
+      </span>
     </div>
   </section>
-  
- 
+
+
   <footer class="footer">
     <div class="social-media">
-      <a href="https://www.linkedin.com/in/shamik-bhattacharjee-078760221/" class="social-icon"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/shamik-bhattacharjee-078760221/" class="social-icon"><i
+          class="fab fa-linkedin"></i></a>
       <a href="https://www.instagram.com/scoop__ahoy/" class="social-icon"><i class="fab fa-instagram"></i></a>
       <a href="https://github.com/codegeek03" class="social-icon"><i class="fab fa-github"></i></a>
     </div>
     <p class="footer-text">© 2023 All rights reserved by shamik bhattacharjee.</p>
   </footer>
 
-<!-- Your content here -->
+  <!-- Your content here -->
 
-<!-- Include Bootstrap JS (optional, for certain components) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+  <!-- Include Bootstrap JS (optional, for certain components) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
