--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
     </svg>+91-8597454445</div>
   </div>
   <button id="btn" type="button">CONTACT ME!</button>
-  <button id="cv" type="button">DOWNLOAD RESUME</button>
+  <!-- <button id="cv" type="button">DOWNLOAD RESUME</button> -->
  
 
 </section>
