--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">CONTACT</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="project.html">PROJECTS</a>
+      </li>
       </ul>
     </div>
   </div>
